--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,10 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    _instanceof:
+        Baldinof\RoadRunnerBundle\Grpc\GrpcServiceInterface:
+            tags: ['baldinof.roadrunner.grpc_service']
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
